<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mattprecious.telescope.TelescopeLayout
        android:id="@+id/telescopeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_appwidget_web" />
    </com.mattprecious.telescope.TelescopeLayout>

    <ToggleButton
        android:id="@+id/toggle_vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checked="true"
        android:textAllCaps="false"
        android:textOff="@string/vibrate_on"
        android:textOn="@string/vibrate_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_fingers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checkedButton="@id/fingers_count_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_vibrate">

        <RadioButton
            android:id="@+id/fingers_count_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingers_count2" />

        <RadioButton
            android:id="@+id/fingers_count_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/fingers_count3" />

        <RadioButton
            android:id="@+id/fingers_count_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingers_count4" />

        <RadioButton
            android:id="@+id/fingers_count_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingers_count5" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>